--- a/package.json
+++ b/package.json
@@ -3,17 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon --watch ./bin/www"
+    "start": "node ./index.js"
   },
   "dependencies": {
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.5",
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "morgan": "~1.9.1",
-    "nodemon": "^2.0.7",
     "open": "^7.4.2"
   },
   "description": "우분투 패키지 크롤링해서 마구 다운받아버리기!",
